[package]
name = "string_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
edit-distance = "2.1.0"
reqwest = { version = "0.11", features = ["blocking"]}